--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "cors": "^2.8.5",
     "express-session": "^1.17.3",
     "mysql": "^2.18.1",
     "react": "^18.2.0",
