--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "express-session": "^1.17.3",
+    "gh-pages": "^4.0.0",
     "mysql": "^2.18.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
@@ -19,6 +20,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start-client": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -45,5 +48,6 @@
   },
   "devDependencies": {
     "@testing-library/react": "^13.3.0"
-  }
+  },
+  "homepage": "https://wenxin-c.github.io/Orbital-PMaster/"
 }
