--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-app",
   "version": "0.1.0",
+  "homepage": "https://wenxin-c.github.io/Orbital-PMaster/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -48,6 +49,6 @@
   },
   "devDependencies": {
     "@testing-library/react": "^13.3.0"
-  },
-  "homepage": "https://wenxin-c.github.io/Orbital-PMaster/"
+  }
+  
 }
