--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "server",
   "version": "1.0.0",
- 
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "serve": "^13.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
