--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
+    "gh-pages": "^4.0.0",
     "serve": "^13.0.2"
   },
   "devDependencies": {
