--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
   "scripts": {
     
     
-    "start-client": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "start": "npm run build && (cd server && npm start)"
+    "eject": "react-scripts eject"
+   
   },
   "eslintConfig": {
     "extends": [
