--- a/server/package.json
+++ b/server/package.json
@@ -1,18 +1,19 @@
 {
   "name": "server",
   "version": "1.0.0",
- 
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "gh-pages": "^4.0.0",
+    "serve": "^13.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
