--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines":{
+    "node":"16.15.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
@@ -14,8 +17,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "gh-pages": "^4.0.0",
-    "serve": "^13.0.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "serve": "^13.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
