--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
   "main": "index.js",
   "engines": {
     "node": "16.15.1",
-    "npm": "8.11.0"    
+    "npm": "8.11.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "gh-pages": "^4.0.0",
