--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^13.3.0"
+    "@testing-library/react": "^13.3.0",
+    "@types/jest": "^28.1.5",
+    "jest": "^28.1.3"
   },
   "proxy": "http://localhost:5003"
 }
