--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "serve": "^13.0.2"
   },
   "devDependencies": {
+    "@types/jest": "^28.1.5",
+    "jest": "^28.1.3",
     "nodemon": "^2.0.16"
   }
 }
